Export dae crashes with un-applied modifiers using sl+open sim static export setting #42022

Closed
opened 2014-09-30 05:32:53 +02:00 by Dave · 10 comments

System Information
Operating system and graphics card

  Slackware Current
  Linux kernel 3.14.18
64 bit with 32bit multilib support
  Geforce GTX 760
  Driver NVIDIA-Linux-x86_64-340.32.run

system-info.txt
system-info.txt

Blender Version
Broken: 2.71
Worked:

Short description of error
When attempting to export as a dae with two mesh objects on separate layers, each mesh having an un-applied Modifiers, using the sl+open sim static setting and selecting only one mesh object blender crashes consistently each time. If the Modifiers are applied then it does not crash when exporting a dae.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
small_pumpkin_Bug_Issue.blend

  File, Export, Collada (default) (dae)
  Selecting the Sl+Open Sim Static then exporting causes it to crash
**System Information** Operating system and graphics card ``` Slackware Current Linux kernel 3.14.18 ``` 64 bit with 32bit multilib support ``` Geforce GTX 760 Driver NVIDIA-Linux-x86_64-340.32.run ``` system-info.txt [system-info.txt](https://archive.blender.org/developer/F113710/system-info.txt) **Blender Version** Broken: 2.71 Worked: **Short description of error** When attempting to export as a dae with two mesh objects on separate layers, each mesh having an un-applied Modifiers, using the sl+open sim static setting and selecting only one mesh object blender crashes consistently each time. If the Modifiers are applied then it does not crash when exporting a dae. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps [small_pumpkin_Bug_Issue.blend](https://archive.blender.org/developer/F113709/small_pumpkin_Bug_Issue.blend) ``` File, Export, Collada (default) (dae) Selecting the Sl+Open Sim Static then exporting causes it to crash ```
Author

Changed status to: 'Open'

Changed status to: 'Open'
Dave self-assigned this 2014-09-30 05:32:53 +02:00
Author

Added subscriber: @Tomi27

Added subscriber: @Tomi27
Author

I tested this a bit more and found out that "Restrict Viewport selection" was toggled off in the Outliner. It exports normally with it on.

I tested this a bit more and found out that "Restrict Viewport selection" was toggled off in the Outliner. It exports normally with it on.
Dave was unassigned by Bastien Montagne 2014-09-30 11:46:48 +02:00
Gaia Clary was assigned by Bastien Montagne 2014-09-30 11:46:48 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Gaia, care to check this one? thanks? :)

Gaia, care to check this one? thanks? :)

This issue was referenced by c0276251d2

This issue was referenced by c0276251d29c773d38ede2f786680d9119112cfd
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit c0276251d2.

Closed by commit c0276251d2.
Member

Thanks for reporting.

Please note: The exporter only exports selected Objects which are also visible in the 3D Viewport. In your case the only selected Object was in a hidden layer. This resulted in an error during export.

I have fixed this now such that you get a warning about "no objects in export set" when you try to export Selected objects while none of the selected objects is visible.in the Viewport.

Thanks for reporting. Please note: The exporter only exports selected Objects which are also visible in the 3D Viewport. In your case the only selected Object was in a hidden layer. This resulted in an error during export. I have fixed this now such that you get a warning about "no objects in export set" when you try to export Selected objects while none of the selected objects is visible.in the Viewport.

This issue was referenced by 19d4d059f1

This issue was referenced by 19d4d059f1816111b2d7bb89a2b2665c097d8959
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42022
No description provided.