fix T42022 Attempt to export empty set of objects resulted in an exception